fixed shifting fields on hover/focus. Used theme colour variables

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -1,18 +1,18 @@
 @import 'node_modules/ember-frost-css-core/scss/frost-core';
 @import 'node_modules/ember-frost-theme/scss/frost-theme';
 
-$border: 1px solid $frost-color-grey-6;
-$color: $frost-color-grey-2;
-$error-border: 1px solid $frost-color-danger;
+$border: 1px solid $frost-color-input-border;
+$color: $frost-color-input;
+$error-border: 1px solid $frost-color-input-error-border;
 $error-margin: 1px; // Note: margin + border width equals border width of focus state
-$focus-border: 2px solid $frost-color-blue-1;
+$focus-border: 2px solid $frost-color-input-focus-border;
 $focus-margin: 0;
-$disabled-border: 1px solid $frost-color-lgrey-1;
-$disabled-bg: $frost-color-lgrey-3;
+$disabled-border: 1px solid $frost-color-input-disabled-border;
+$disabled-bg: $frost-color-input-disabled-bg;
 $font-size: $frost-font-s;
 $height: 35px;
 $margin: 1px; // Note: margin + border width equals border width of focus state
-$padding: 0 6px;
+$padding: 0 19px 0 6px;
 
 .frost-text {
   &.error {
@@ -33,12 +33,11 @@ $padding: 0 6px;
 
     &:focus {
       border: $focus-border;
-      margin: $focus-margin;
+      margin: $margin;
     }
 
     &:read-only {
       border: none;
-      margin: $focus-margin;
     }
 
     &:disabled {
@@ -46,18 +45,21 @@ $padding: 0 6px;
       background-color: $disabled-bg;
     }
 
-    &:hover:enabled:read-write{
+    &:hover:enabled:read-write {
       border: $focus-border;
+      margin: $margin;
     }
+
   }
 
-  .close {
-    position: relative;
-    left: -25px;
-    top: 1px;
-    height: 15px;
-    width: 15px;
-    color: $frost-color-grey-6;
-    cursor: pointer;
-  }
+    .close {
+      position: relative;
+      left: -20px;
+      top: 1px;
+      height: 15px;
+      width: 15px;
+      color: $frost-color-grey-6;
+      cursor: pointer;
+    }
+
 }
